// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`experimentsReducer Adds new sampleId when sample is created 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "name": "experiment 1",
    "notifyByEmail": true,
    "sampleIds": Array [
      "testSampleId",
    ],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Adds new sampleId when sample is created and we already have one sample 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "name": "experiment 1",
    "notifyByEmail": true,
    "sampleIds": Array [
      "testSampleId",
      "testAnotherSampleId",
    ],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Deletes an experiment correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "name": "experiment 1",
    "notifyByEmail": true,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Deletes samples correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "name": "experiment 1",
    "notifyByEmail": true,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Error state inserts error correctly 1`] = `
Object {
  "ids": Array [],
  "meta": Object {
    "error": "Error message",
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Inserts a new experiment correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "id": "experiment-1",
    "meta": Object {
      "organism": null,
      "type": "10x",
    },
    "name": "experiment 1",
    "notifyByEmail": true,
    "projectUuid": "experiment-1",
    "sampleIds": Array [],
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Loading state changes meta state 1`] = `
Object {
  "ids": Array [],
  "meta": Object {
    "error": false,
    "loading": true,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Loads an experiment correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "name": "experiment 1",
    "notifyByEmail": true,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "activeExperimentId": "experiment-1",
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Loads experiment correctly on existing state 1`] = `
Object {
  "experiment-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "id": "experiment-1",
    "meta": Object {
      "organism": null,
      "type": "10x",
    },
    "name": "experiment 1",
    "notifyByEmail": true,
    "projectUuid": "experiment-1",
    "sampleIds": Array [],
  },
  "experiment-2": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "id": "experiment-2",
    "meta": Object {
      "organism": null,
      "type": "10x",
    },
    "name": "experiment 2",
    "notifyByEmail": true,
    "projectUuid": "experiment-2",
    "sampleIds": Array [],
  },
  "ids": Array [
    "experiment-1",
    "experiment-2",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Loads experiments correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "name": "experiment 1",
    "notifyByEmail": true,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "experiment-2": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-2",
    "name": "experiment 2",
    "notifyByEmail": true,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
    "experiment-2",
  ],
  "meta": Object {
    "activeExperimentId": "experiment-1",
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Updates an experiment correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "name": "updated name",
    "notifyByEmail": true,
    "sampleIds": Array [],
    "updatedAt": "02-01-2021",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;
